get all filter, get by id, create 2
